norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__instance_all_basic_moves-12.snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LDF (1) is at LUF,
        RDF (0) is at RDF,
        LDB (2) is at LDF,
        RUB (0) is at RUB,
        LUF (2) is at LUB,
        RDB (0) is at RDB,
        LUB (1) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        DF (✓) is at DF,
        UB (✓) is at UB,
        DB (✓) is at DB,
        FR (✓) is at FR,
        BR (✓) is at BR,
        LD (✓) is at FL,
        LU (✓) is at BL,
        RU (✓) is at RU,
        FL (✓) is at LU,
        RD (✓) is at RD,
        BL (✓) is at LD,
    ],
}
